tests/NormalTests/paczka1/small_fuzzy/50272534.err
Error in line 13: wMx1wxX S404 240,4
Error in line 9: IFJZPvYnFtZ S780 60,7
